gcc/testsuite/rust/rustc/ui/extoption_env-not-string-literal.rs
fn main() { option_env!(10); } // { dg-error "" "" { target *-*-* } }

